--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
             <version>4.0.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.storm</groupId>
+            <artifactId>storm-hdfs</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
